# pagodo

./: README.md  pyproject.toml
src/pagodo/: __init__.py  cli.py  config.py  pagodo.py  scraper.py
src/pagodo/connectors/: base.py  serpapi.py  serper.py
